--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,78 +1,78 @@
 find_package(Threads REQUIRED)
 find_package(Boost REQUIRED)
 
-add_executable(iocoro_tcp_roundtrip apps/iocoro/iocoro_tcp_roundtrip.cpp)
+add_executable(iocoro_tcp_roundtrip apps/iocoro/tcp_roundtrip.cpp)
 target_link_libraries(iocoro_tcp_roundtrip PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_tcp_roundtrip PRIVATE cxx_std_20)
 target_compile_options(iocoro_tcp_roundtrip PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_tcp_roundtrip apps/asio/asio_tcp_roundtrip.cpp)
+add_executable(asio_tcp_roundtrip apps/asio/tcp_roundtrip.cpp)
 target_link_libraries(asio_tcp_roundtrip PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_roundtrip PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_roundtrip PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_roundtrip PRIVATE ${Boost_INCLUDE_DIRS})
 
-add_executable(iocoro_tcp_connect_accept apps/iocoro/iocoro_tcp_connect_accept.cpp)
+add_executable(iocoro_tcp_connect_accept apps/iocoro/tcp_connect_accept.cpp)
 target_link_libraries(iocoro_tcp_connect_accept PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_tcp_connect_accept PRIVATE cxx_std_20)
 target_compile_options(iocoro_tcp_connect_accept PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_tcp_connect_accept apps/asio/asio_tcp_connect_accept.cpp)
+add_executable(asio_tcp_connect_accept apps/asio/tcp_connect_accept.cpp)
 target_link_libraries(asio_tcp_connect_accept PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_connect_accept PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_connect_accept PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_connect_accept PRIVATE ${Boost_INCLUDE_DIRS})
 
-add_executable(iocoro_tcp_throughput apps/iocoro/iocoro_tcp_throughput.cpp)
+add_executable(iocoro_tcp_throughput apps/iocoro/tcp_throughput.cpp)
 target_link_libraries(iocoro_tcp_throughput PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_tcp_throughput PRIVATE cxx_std_20)
 target_compile_options(iocoro_tcp_throughput PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_tcp_throughput apps/asio/asio_tcp_throughput.cpp)
+add_executable(asio_tcp_throughput apps/asio/tcp_throughput.cpp)
 target_link_libraries(asio_tcp_throughput PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_throughput PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_throughput PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_throughput PRIVATE ${Boost_INCLUDE_DIRS})
 
-add_executable(iocoro_udp_send_receive apps/iocoro/iocoro_udp_send_receive.cpp)
+add_executable(iocoro_udp_send_receive apps/iocoro/udp_send_receive.cpp)
 target_link_libraries(iocoro_udp_send_receive PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_udp_send_receive PRIVATE cxx_std_20)
 target_compile_options(iocoro_udp_send_receive PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_udp_send_receive apps/asio/asio_udp_send_receive.cpp)
+add_executable(asio_udp_send_receive apps/asio/udp_send_receive.cpp)
 target_link_libraries(asio_udp_send_receive PRIVATE Threads::Threads)
 target_compile_features(asio_udp_send_receive PRIVATE cxx_std_20)
 target_compile_options(asio_udp_send_receive PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_udp_send_receive PRIVATE ${Boost_INCLUDE_DIRS})
 
-add_executable(iocoro_timer_churn apps/iocoro/iocoro_timer_churn.cpp)
+add_executable(iocoro_timer_churn apps/iocoro/timer_churn.cpp)
 target_link_libraries(iocoro_timer_churn PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_timer_churn PRIVATE cxx_std_20)
 target_compile_options(iocoro_timer_churn PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_timer_churn apps/asio/asio_timer_churn.cpp)
+add_executable(asio_timer_churn apps/asio/timer_churn.cpp)
 target_link_libraries(asio_timer_churn PRIVATE Threads::Threads)
 target_compile_features(asio_timer_churn PRIVATE cxx_std_20)
 target_compile_options(asio_timer_churn PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_timer_churn PRIVATE ${Boost_INCLUDE_DIRS})
 
-add_executable(iocoro_tcp_latency apps/iocoro/iocoro_tcp_latency.cpp)
+add_executable(iocoro_tcp_latency apps/iocoro/tcp_latency.cpp)
 target_link_libraries(iocoro_tcp_latency PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_tcp_latency PRIVATE cxx_std_20)
 target_compile_options(iocoro_tcp_latency PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_tcp_latency apps/asio/asio_tcp_latency.cpp)
+add_executable(asio_tcp_latency apps/asio/tcp_latency.cpp)
 target_link_libraries(asio_tcp_latency PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_latency PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_latency PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_latency PRIVATE ${Boost_INCLUDE_DIRS})
 
-add_executable(iocoro_thread_pool_scaling apps/iocoro/iocoro_thread_pool_scaling.cpp)
+add_executable(iocoro_thread_pool_scaling apps/iocoro/thread_pool_scaling.cpp)
 target_link_libraries(iocoro_thread_pool_scaling PRIVATE iocoro::iocoro Threads::Threads)
 target_compile_features(iocoro_thread_pool_scaling PRIVATE cxx_std_20)
 target_compile_options(iocoro_thread_pool_scaling PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 
-add_executable(asio_thread_pool_scaling apps/asio/asio_thread_pool_scaling.cpp)
+add_executable(asio_thread_pool_scaling apps/asio/thread_pool_scaling.cpp)
 target_link_libraries(asio_thread_pool_scaling PRIVATE Threads::Threads)
 target_compile_features(asio_thread_pool_scaling PRIVATE cxx_std_20)
 target_compile_options(asio_thread_pool_scaling PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
