--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,7 @@ jobs:
             --timeout-sec 180
 
       - name: Upload perf artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: perf-regression-report
