revert(test,ci): drop compile-only smoke and restore ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,15 @@ on:
     branches:
       - master
 
-permissions:
-  contents: read
-
 jobs:
   pre-commit:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
@@ -33,10 +30,10 @@ jobs:
           pre-commit run --all-files --show-diff-on-failure
 
   clang-tidy:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -64,7 +61,7 @@ jobs:
           ./scripts/run_clang_tidy.sh --clean --build-dir build-tidy --jobs "$(nproc)"
 
   build-test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -76,7 +73,7 @@ jobs:
             sanitizer: tsan
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -118,14 +115,14 @@ jobs:
           fi
 
   build-test-uring:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         toolchain: [gcc, clang]
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -166,10 +163,10 @@ jobs:
           ctest --test-dir build-uring --output-on-failure -j "$(nproc)"
 
   install-test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -223,10 +220,10 @@ jobs:
           /tmp/iocoro-consumer/build/consumer
 
   coverage:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -270,10 +267,10 @@ jobs:
           cat "$HOME/coverage_summary.md" >> "$GITHUB_STEP_SUMMARY"
 
   perf-benchmarks:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
